--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-<!-- 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 	<title>Document</title>
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/media.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="js/jquery-3.1.1.min.js"></script>
 	<script src="js/loader.js"></script>
 </head>
