--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 						</li>
 					</ul>
 				</div>
+				<h5 class="contacts-title">Contacts</h5>
 				<ul class="contacts">
 					<li class="clearfix">
 						<img src="img/ico-marker.png" alt="">
