Фінальна мобільна версія сайту

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<main class="left">
 				<article class="hello">
 					<h3>Hello</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente eligendi molestiae quasi molestias fugiat commodi, laudantium consequatur temporibus veniam recusandae ullam dicta repellat mollitia. Unde alias voluptatem reiciendis, veniam a.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati ullam voluptatum explicabo autem at, architecto.</p>
 				</article>
 				<article class="education">
 					<div class="clearfix">
@@ -32,18 +32,7 @@
 					<div class="university">
 						<span>Vinnytsia national technical university</span>
 						<span>Electronics engineer in 2010</span>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium fugiat, optio tempore consequatur facere iste hic perferendis rerum quam aspernatur quaerat architecto autem, nobis similique illum reiciendis ullam odit saepe.</p>
-					</div>
-				</article>
-				<article class="education">
-					<div class="clearfix">
-						<img src="img/ico-education.png" alt="ico education">				
-						<h3>Education</h3>
-					</div>
-					<div class="university">
-						<span>Vinnytsia national technical university</span>
-						<span>Electronics engineer in 2010</span>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos accusamus, maiores dolores iste quisquam dolorum, nam animi cum eveniet, eum quam ab hic facere tempora. Ullam beatae quam quaerat molestiae neque consequatur voluptatum optio. Officia reprehenderit id non blanditiis hic quia enim, reiciendis! Corrupti, sit quibusdam repellendus, placeat est error numquam omnis, odit ex dolorem nisi recusandae eum, reiciendis. Rem.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae doloremque quasi, rem totam modi esse dolorum libero harum autem blanditiis.</p>
 					</div>
 				</article>
 				<article class="education">
@@ -54,7 +43,18 @@
 					<div class="university">
 						<span>Vinnytsia national technical university</span>
 						<span>Electronics engineer in 2010</span>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, quod neque illo animi hic eaque. Impedit velit soluta at maiores, consequuntur a dolore ex aliquam excepturi assumenda nobis provident odio, praesentium molestiae quae amet quibusdam porro ab nostrum. Accusantium magnam esse veniam quas iure repellat cupiditate debitis corporis nostrum vitae.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis nisi amet, enim. Rerum asperiores, harum qui eos repudiandae in, commodi!</p>
+					</div>
+				</article>
+				<article class="education">
+					<div class="clearfix">
+						<img src="img/ico-education.png" alt="ico education">				
+						<h3>Education</h3>
+					</div>
+					<div class="university">
+						<span>Vinnytsia national technical university</span>
+						<span>Electronics engineer in 2010</span>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis illo saepe laborum eos quaerat quidem repellat voluptatibus, qui nulla porro.</p>
 					</div>
 				</article>									
 			</main>
